# bellmodel

./: CMakeLists.txt
src/java/bellmodel/: MatPoint.java  ModelCalc.java  ModelData.java
src/native/: bell-model.cpp  bell-model.h  jni_MatPoint.cpp
